--- a/Index.html
+++ b/Index.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Author" content="Jose Efrain Justiniano">
-    <meta name="Description" content="Histotial de clasicos crucenios entre blooming y oriente">
-
-    <!-- Open Graph Meta Tags: etiquetas que ayudan a las paginas de redes sociales
-     a mejorar su apariencia al ser compartidas -->
-    <meta property="og:title" content="Clasico Crucenio">
-    <meta property="og:description" content="Histotial de clasicos crucenios entre blooming y oriente">
-    <meta property="og:image" content="URL_de_la_imagen">
-    <meta property="og:url" content="URL_de_la_pagina">
-
-    <title>Clasico Crucenio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sample HTML Page</title>
 </head>
 
 <body>
-    <h1>Bienvenido al Clasico Crucenio</h1>
-    <p>Explora la historia de los clásicos cruceños entre Blooming y Oriente.</p>
-    <ul>
-        <li><a href="equipos/Blooming.html">Blooming</a></li>
-        <li><a href="equipos/Oriente.html">Oriente</a></li>
-    </ul>
+    <h1>PAGINA 1</h1>
+    <a href="Pagina1/index.html">Ir a la pagina 2</a>
+
+    <h1>PAGINA 2</h1>
+    <a href="Pagina2/index.html">Ir a la pagina 1</a>
+
 </body>
 
 </html>
